In process of simplifying data frames based on the one created in data_wrangling. Have for the time being moved all data frame code to data_wrangling, which will be moved back to respective scripts after. Not done yet.

--- a/analysis/paper/paper.Rmd
+++ b/analysis/paper/paper.Rmd
@@ -413,7 +413,7 @@ Narrative on how well the current surveys are capturing the Spring arrival and F
 ```{r Fig-SpeciesTiming, echo=FALSE, eval=TRUE, cache=TRUE, fig.show= 'asis', fig.cap="For each of the target species, the dates on which they were observed in any of the sample areas."}
 
 #edit to use the name of the new plot
-print(Plot1)
+#print(Plot1)
 ```
 
 
